@@ -1,23 +1,19 @@
-/**
- * Copyright 2020 Equipment & Tool Institute
+/*
+ * Copyright 2021 Equipment & Tool Institute
  */
 package org.etools.j1939_84.controllers.part1;
 
 import static org.etools.j1939_84.J1939_84.NL;
 import static org.etools.j1939_84.model.Outcome.FAIL;
-import static org.etools.j1939_84.model.Outcome.WARN;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Executor;
 import org.etools.j1939_84.bus.Packet;
@@ -84,11 +80,8 @@ public class Step17ControllerTest extends AbstractControllerTest {
     @Mock
     private VehicleInformationModule vehicleInformationModule;
 
-    /**
-     * @throws java.lang.Exception
-     */
     @Before
-    public void setUp() throws Exception {
+    public void setUp()  {
 
         listener = new TestResultsListener(mockListener);
         DateTimeModule.setInstance(null);
@@ -105,11 +98,8 @@ public class Step17ControllerTest extends AbstractControllerTest {
         setup(instance, listener, j1939, engineSpeedModule, reportFileModule, executor, vehicleInformationModule);
     }
 
-    /**
-     * @throws java.lang.Exception
-     */
     @After
-    public void tearDown() throws Exception {
+    public void tearDown() {
         verifyNoMoreInteractions(executor,
                                  engineSpeedModule,
                                  bannerModule,
@@ -125,13 +115,13 @@ public class Step17ControllerTest extends AbstractControllerTest {
      */
     @Test
     public void testEmptyPacketFailure() {
-        List<Integer> obdModuleAddresses = Collections.singletonList(0x01);
+        List<Integer> obdModuleAddresses = List.of(0x01);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(), List.of()));
         when(dtcModule.requestDM6(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false, Collections.emptyList(), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -140,12 +130,12 @@ public class Step17ControllerTest extends AbstractControllerTest {
         verify(dtcModule).requestDM6(any());
         verify(dtcModule).requestDM6(any(), eq(0x01));
 
-        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, "6.1.17.2.c - Fail if no OBD ECU provides DM6");
-        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, WARN,
-                                        "6.1.17.3.a Destination Specific DM6 requests to OBD modules did not return any responses");
+        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL, "6.1.17.2.c - No OBD ECU provided DM6");
+        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
+                                        "6.1.17.4.b - OBD module Engine #2 (1) did not provide a response to Global query and did not provide a NACK for the DS query");
 
-        String expectedResults = "FAIL: 6.1.17.2.c - Fail if no OBD ECU provides DM6" + NL;
-        expectedResults += "WARN: 6.1.17.3.a Destination Specific DM6 requests to OBD modules did not return any responses"
+        String expectedResults = "FAIL: 6.1.17.2.c - No OBD ECU provided DM6" + NL;
+        expectedResults += "FAIL: 6.1.17.4.b - OBD module Engine #2 (1) did not provide a response to Global query and did not provide a NACK for the DS query"
                 + NL;
         assertEquals(expectedResults, listener.getResults());
         assertEquals("", listener.getMessages());
@@ -162,28 +152,18 @@ public class Step17ControllerTest extends AbstractControllerTest {
                 Packet.create(PGN, 0x01, 0x11, 0x22, 0x33, 0x44, 0x55, 0x66, 0x77, 0x88));
         DM6PendingEmissionDTCPacket packet3 = new DM6PendingEmissionDTCPacket(
                 Packet.create(PGN, 0x03, 0x00, 0x00, 0x04, 0x00, 0xFF, 0xFF, 0xFF, 0xFF));
-        List<Integer> obdModuleAddresses = new ArrayList<>() {
-            {
-                add(0x01);
-                add(0x03);
-            }
-        };
+        List<Integer> obdModuleAddresses = List.of(1,3);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
 
         DM6PendingEmissionDTCPacket obdPacket3 = new DM6PendingEmissionDTCPacket(
                 Packet.create(PGN, 0x03, 0x11, 0x22, 0x13, 0x44, 0x55, 0x66, 0x77, 0x88));
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, new ArrayList<>() {
-                    {
-                        add(packet1);
-                        add(packet3);
-                    }
-                }, Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1, packet3), List.of()));
         when(dtcModule.requestDM6(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
         when(dtcModule.requestDM6(any(), eq(0x03)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(obdPacket3), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(obdPacket3), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -193,19 +173,16 @@ public class Step17ControllerTest extends AbstractControllerTest {
         verify(dtcModule).requestDM6(any(), eq(0x01));
         verify(dtcModule).requestDM6(any(), eq(0x03));
 
-        verify(mockListener, times(2)).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                                  "6.1.17.2.a - Fail if any ECU reports pending DTCs");
-        verify(mockListener, times(2)).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                                  "6.1.17.2.b - Fail if any ECU does not report MIL off");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.17.4.a Fail if any difference compared to data received during global request");
+                                                  "6.1.17.2.a - An ECU reported pending DTCs");
+        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
+                                                  "6.1.17.2.b - An ECU did not report MIL off");
+        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
+                                        "6.1.17.4.a - Difference compared to data received during global request");
 
-        String expectedResults = "FAIL: 6.1.17.2.a - Fail if any ECU reports pending DTCs" + NL;
-        expectedResults += "FAIL: 6.1.17.2.b - Fail if any ECU does not report MIL off" + NL;
-        expectedResults += "FAIL: 6.1.17.2.a - Fail if any ECU reports pending DTCs" + NL;
-        expectedResults += "FAIL: 6.1.17.2.b - Fail if any ECU does not report MIL off" + NL;
-        expectedResults += "FAIL: 6.1.17.4.a Fail if any difference compared to data received during global request"
-                + NL;
+        String expectedResults = "FAIL: 6.1.17.2.a - An ECU reported pending DTCs" + NL;
+        expectedResults += "FAIL: 6.1.17.2.b - An ECU did not report MIL off" + NL;
+        expectedResults += "FAIL: 6.1.17.4.a - Difference compared to data received during global request" + NL;
 
         assertEquals(expectedResults, listener.getResults());
     }
@@ -260,18 +237,11 @@ public class Step17ControllerTest extends AbstractControllerTest {
                 Packet.create(PGN, 0x03, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF));
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, new ArrayList<>() {
-                    {
-                        add(packet1);
-                        add(packet3);
-                    }
-                }, Collections.singletonList(ackPacket)));
+                .thenReturn(new RequestResult<>(false, List.of(packet1, packet3), List.of(ackPacket)));
         when(dtcModule.requestDM6(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false,
-                                                Collections.emptyList(), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(), List.of()));
         when(dtcModule.requestDM6(any(), eq(0x03)))
-                .thenReturn(new RequestResult<>(false,
-                                                Collections.singletonList(packet3b), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet3b), List.of()));
 
         runTest();
         verify(dataRepository, atLeastOnce()).getObdModuleAddresses();
@@ -281,23 +251,16 @@ public class Step17ControllerTest extends AbstractControllerTest {
         verify(dtcModule).requestDM6(any(), eq(0x01));
         verify(dtcModule).requestDM6(any(), eq(0x03));
 
-        verify(mockListener, times(2)).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                                  "6.1.17.2.a - Fail if any ECU reports pending DTCs");
-        verify(mockListener, times(2)).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                                  "6.1.17.2.b - Fail if any ECU does not report MIL off");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.17.4.a Fail if any difference compared to data received during global request");
+                                                  "6.1.17.2.a - An ECU reported pending DTCs");
         verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
-                                        "6.1.17.4.b Fail if NACK not received from OBD ECUs that did not respond to global query");
+                                                  "6.1.17.2.b - An ECU did not report MIL off");
+        verify(mockListener).addOutcome(PART_NUMBER, STEP_NUMBER, FAIL,
+                                        "6.1.17.4.a - Difference compared to data received during global request");
 
-        String expectedResults = "FAIL: 6.1.17.2.a - Fail if any ECU reports pending DTCs" + NL;
-        expectedResults += "FAIL: 6.1.17.2.b - Fail if any ECU does not report MIL off" + NL;
-        expectedResults += "FAIL: 6.1.17.2.a - Fail if any ECU reports pending DTCs" + NL;
-        expectedResults += "FAIL: 6.1.17.2.b - Fail if any ECU does not report MIL off" + NL;
-        expectedResults += "FAIL: 6.1.17.4.a Fail if any difference compared to data received during global request"
-                + NL;
-        expectedResults += "FAIL: 6.1.17.4.b Fail if NACK not received from OBD ECUs that did not respond to global query"
-                + NL;
+        String expectedResults = "FAIL: 6.1.17.2.a - An ECU reported pending DTCs" + NL;
+        expectedResults += "FAIL: 6.1.17.2.b - An ECU did not report MIL off" + NL;
+        expectedResults += "FAIL: 6.1.17.4.a - Difference compared to data received during global request" + NL;
 
         assertEquals(expectedResults, listener.getResults());
     }
@@ -312,13 +275,13 @@ public class Step17ControllerTest extends AbstractControllerTest {
         DM6PendingEmissionDTCPacket packet1 = new DM6PendingEmissionDTCPacket(
                 Packet.create(PGN, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00));
 
-        List<Integer> obdModuleAddresses = Collections.singletonList(0x01);
+        List<Integer> obdModuleAddresses = List.of(0x01);
         when(dataRepository.getObdModuleAddresses()).thenReturn(obdModuleAddresses);
 
         when(dtcModule.requestDM6(any()))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
         when(dtcModule.requestDM6(any(), eq(0x01)))
-                .thenReturn(new RequestResult<>(false, Collections.singletonList(packet1), Collections.emptyList()));
+                .thenReturn(new RequestResult<>(false, List.of(packet1), List.of()));
 
         runTest();
         verify(dataRepository).getObdModuleAddresses();
